--- a/index.css
+++ b/index.css
@@ -1,33 +1,33 @@
-.header{
+#heading {
+    color: red;
+}
+
+.header {
     display: flex;
     justify-content: space-between;
-    border: 1px solid black;
+    border: 1px solid black
 }
 
 .logo {
-    width: 150px;
+    width: 200px;
 }
 
-.nav-items{
-    font-size: 24px;
+.nav-items {
+    padding:  0px 20px;
 }
 
 .nav-items > ul {
+    font-size: 24px;
     display: flex;
-    padding: 0px 20px;
     list-style-type: none;
 }
 
 .nav-items > ul > li {
     padding: 10px;
-    margin: 10px;
+    margin: 10px
 }
 
-.search{
-    padding: 10px;
-}
-
-.res-container{
+.res-container {
     display: flex;
     flex-wrap: wrap;
 }
@@ -36,8 +36,6 @@
     margin: 5px;
     padding: 5px;
     width: 200px;
-    height: 300px;
-    
 }
 
 .res-card:hover {
@@ -45,8 +43,10 @@
     border: 1px solid black;
 }
 
-.res-logo {
-    width: 100%;
-    height: 40%;
+.search {
+    padding: 10px
 }
 
+.res-logo {
+    width: 100%;
+}
