--- a/index.css
+++ b/index.css
@@ -55,3 +55,21 @@
     margin: 10px;
     cursor: pointer;
 }
+
+.shimmer-container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.shimmer-card {
+    margin: 10px;
+    width: 200px;
+    height: 400px;
+    background-color: #f0f0f0;
+}
+
+.login {
+    cursor: pointer;
+    padding: 0 20px;
+    margin: 20px;
+}
